# python_ai_service/schemas.py
@@ -1,15 +1,7 @@
 from pydantic import BaseModel
 from typing import List
 
-class ExpenseRecord(BaseModel):
-    date: str
-    amount: float
 
-class PredictiveBudgetRequest(BaseModel):
-    user_id: int
-    budget: float
-    payday_date: int
-    expenses: List[ExpenseRecord]
 
 class ChatRequest(BaseModel):
     user_id: int
